# recruitment_agency

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
authenticate/: admin.py  forms.py  urls.py  views.py
authenticate/migrations/: 0001_initial.py  0002_alter_user_role.py  0003_alter_user_first_name_alter_user_last_name.py
authenticate/models/: __init__.py  user.py
authenticate/templates/: create_recruiter.html  index.html  login.html  register.html
core/: settings.py  urls.py
exception_handlers/: base.py  handler.py
job/: forms.py  urls.py  views.py
job/migrations/: 0001_initial.py  0002_alter_employer_company.py  0002_employer.py  0002_jobvacancy_currency.py  0003_alter_jobvacancy_created_at_and_more.py  0003_jobvacancy_salary.py
job/models/: __init__.py  company.py  employer.py  job_application.py  job_seeker.py  job_seeker_profile.py  job_vacancy.py  location.py  recruiter.py
job/templates/: company_detail.html  company_list.html  create_company.html  index.html  job_application_form.html  job_detail.html  job_form.html  job_list.html  job_seeker_list.html  job_vacancies_list.html  my_company.html  profile_form.html  profile_view.html  recruiter_list.html
logs/: admin.py  apps.py  serializers.py  signals.py  urls.py  views.py
logs/migrations/: 0001_initial.py  0002_actionlog_description.py
logs/models/: __init__.py  action_log.py  notification.py
templates/: main.html
