[tool.poetry]
name = "recruitment-agency"
version = "0.1.0"
description = ""
authors = ["Svitlana Tsytsyk <TSYTSYK.svetlana@gmail.com>"]
license = ": MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.7"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
