[tool.poetry]
name = "recruitment-agency"
version = "0.1.0"
description = ""
authors = ["Svitlana Tsytsyk <TSYTSYK.svetlana@gmail.com>"]
license = ": MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
psycopg2 = "^2.9.10"
python-dotenv = "^1.0.1"
social-auth-app-django = "^5.4.3"
django-widget-tweaks = "^1.5.0"
rest-framework-simplejwt = "^0.0.2"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.5.0"
django = "^5.2"
drf-yasg = "^1.21.10"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
